adjusted css on privacy to correct white space

--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,10 @@ input #textarea {
 }
 
 .privacy {
+    display: block;
+    overflow-x: hidden;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 0px;
     padding-right: 0px;
 }
